# truemail

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CLA.md  CLA.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  DONATE.md  DONATE.ru.md  LICENSING.md  Makefile  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  clippy.toml  review.md
.github/workflows/: ci.yml  release.yml
.gitverse/workflows/: ci.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/nsis/: installer.nsi
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/ui/: app.js  bridge.js  index.html  notify.html  notify.js  styles.css  theme-init.js
apps/desktop/ui/locales/: en.json  ru.json
apps/desktop/ui/modules/: calendar-contacts.js  commands-accessibility.js  composer.js  i18n-onboarding.js  mail.js  settings.js  shell.js  smart-rules.js
assets/brand/: README.md
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: 0001_accounts.sql  0002_folders.sql  0003_messages.sql  0004_contacts.sql  0005_calendar.sql  0006_smart_folders.sql  0007_settings.sql  0008_search.sql  0009_encrypt_settings.sql  0010_storage_meta.sql  0011_integrity_and_sync.sql  0012_outbox_message_link.sql  0013_remote_auxiliary_ids.sql  0014_auxiliary_collections.sql  0015_gmail_remote_ids.sql  0016_account_retention.sql  0017_mail_sync_tokens.sql  0018_auxiliary_sync_tokens.sql  0019_mail_rules.sql  0020_message_templates.sql  0021_smart_folder_sources.sql  0022_api_token_hash.sql  0023_message_content_cache.sql  0024_jmap_accounts.sql  0025_contact_phones.sql  0026_contact_visibility.sql  0027_carddav_sync_tokens.sql  0028_drop_toolbar_actions.sql  0029_dav_urls.sql  0030_contact_addresses.sql  0031_mail_rule_label.sql
crates/core/src/: error.rs  lib.rs  logging.rs
crates/core/src/account/: autoconfig.rs  auxiliary.rs  dav.rs  google_services.rs  mod.rs  oauth.rs
crates/core/src/api/: mod.rs
crates/core/src/backend/: ews.rs  gmail_api.rs  imap.rs  jmap.rs  mod.rs  smtp.rs
crates/core/src/crypto/: mod.rs
crates/core/src/i18n/: mod.rs
crates/core/src/model/: account.rs  contact.rs  event.rs  folder.rs  message.rs  mod.rs  rule.rs  settings.rs
crates/core/src/search/: mod.rs
crates/core/src/storage/: blobs.rs  mod.rs  repo.rs
docs/: 03-architecture.md  04-tech-stack.md  05-protocols.md  06-ai-api.md  10-design.md  RELEASE_NOTES.md
locales/: en.ftl  ru.ftl
scripts/: dev.ps1  dev.sh  ensure-perl.ps1  lint.ps1  publish-manifest.sh  publish-release.ps1  publish-release.sh  with-perl.ps1
website/: index.html  latest.json
website/privacy/: index.html
website/terms/: index.html
