[package]
name = "truemail-desktop"
description = "truemail — десктоп-приложение (Tauri v2)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "truemail"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
truemail-core = { path = "../../../crates/core" }
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
base64.workspace = true
anyhow.workspace = true
rfd.workspace = true
sqlx.workspace = true
chrono.workspace = true
zeroize.workspace = true
tokio-rustls.workspace = true
url.workspace = true
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-window-state = "2.4.1"
